# nuxt-apex

./: .gitignore  .nuxtignore  .releaserc.json  CONTRIBUTING.md  LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.js  test.pr.txt  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.test.yml  ci.yml  commitlint.yml  release.yml  tests.yml
cypress/e2e/: index.cy.ts
cypress/support/: commands.ts  index.d.ts
playground/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  types.d.ts
playground/components/: ApexFetcher.vue
playground/composables/: useTFetchValidationGet.ts
playground/plugins/: hydration-flag.client.ts
playground/server/api/: [id].put.ts  [pid].get.ts  [type].get.ts  [uid].get.ts  [uid].post.ts  [user-id].put.ts  categories.put.ts  fake-data.get.ts  fakeData.json  history.get.ts  messages.post.ts  orders.post.ts  posts.delete.ts  profiles.get.ts  profiles.post.ts  settings.post.ts  settings.put.ts  tables.get.ts  types.d.ts  users.post.ts  validation.get.ts
playground/server/utils/: index.ts
playground/utils/: invokeApiComposable.ts
rust/: Cargo.toml
rust/src/: main.rs
src/: logger.ts  mockgen.ts  module.ts
src/mockgen/: index.ts
src/runtime/composables/: useCreateFetcher.ts  useLaod.ts  useSmartFetch.client.ts  useSmartFetch.server.ts
src/runtime/templates/: fetch.txt  omit.txt  (+1 more)
test/: codegen.spec.ts  generator.spec.ts  see.ts
test/__snapshots__/: codegen.spec.ts.snap  generator.spec.ts.snap
(+119 files in other folders)
