[package]
name = "nuxt-api-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
notify = "8.0"
walkdir = "2.3"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
swc_common = "11.1.3"
swc_ecmascript = { version = "24.0.0", features = ["parser", "typescript"] }
log = "0.4"
env_logger = "0.11.8"
